Switch to Boost header-only libraries for unit tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,8 +10,12 @@
 
 
 #Prep ourselves for compiling with boost
-include(../extern/boost.cmake)
+# include(../extern/boost.cmake)
 
+find_package(
+  BoostTestHeaders
+    REQUIRED
+)
 
 add_subdirectory(outfile)
 add_subdirectory(solver)
